# engageai

./: .gitignore  .sp_info  Makefile
.devcontainer/: Dockerfile  c3l-engageai.code-workspace  devcontainer.json  docker-compose.yml  setup-mounts.sh
.output_html_pdf/: html_pdf.py  weekly_report_assessment_report_14072025_21072025.html  weekly_report_video_report_05-09-2025_12-09-2025.html
aws/athena_query/: index.py  pyproject.toml
cdk/: .env.example  .gitignore  Makefile  README.md  app.py  bootstrap.py  cdk.context.json  cdk.json  pyproject.toml  secrets.py
cdk/c3l_engageai/: config.py  deploy_stage.py  helpers.py  pipeline.py
cdk/c3l_engageai/services/: apigateway.py  datazone.py  glue.py  iam.py  kms.py  lakeformation.py  lambdas.py  s3.py  secretsmanager.py
cdk/c3l_engageai/stacks/: datalake_stack.py  datapipeline.py  datazone_cdk_stack.py  datazone_stack.py  secrets.py  try_datapipeline.py
cdk/scripts/: permission.sh
cdk/secrets/: example.json
cdk/tests/: test_cdk_stack.py
datazone_setup/config/datazone_project/: blueprint.json  datazone_s3_asset_source.yaml  pyproject.toml  setup_datazone.py  setup_datazone_testing.py  setup_datazone_testing_2.py  setup_glossary.py  setup_lakeformation.py
engageai_new/: pyproject.toml
engageai_new/src/: main.py
engageai_new/src/common/: readcsv_writehtml.py  s3_helper.py
engageai_new/src/models/: action.py  assessment.py  engagement.py  nudge.py  semester_report.py  sent_message.py  student.py  video.py
engageai_new/src/service/: assessment.py  engagement.py  semester_report.py  set_message.py  video.py
engageai_new/test/: test_assessment.py  test_video.py  testing_edit_manualduraiton_video.py
module/: pyproject.toml
module/data_fetching/: test.ipynb  test.py
module/data_pipeline/: data_aws_import_singledf.py  logger.py
module/moodle/: pyproject.toml  testing.py
module/moodle/function_name/: ClassMoodleService.py  all_functioon.py  check_enrol_students.py  check_message.py  create_fake_user.py  create_fake_user_copy.py  get_assign_submission.py  get_course_assign.py  get_user.py  sent_message.py
module/moodle_shared/: moodle_functionname.py
module/moodle_shared/Service/: ChecklistService.py
module/moodle_shared/function_name/: ClassMoodleService.py  check_enrol_students.py  check_md.md  enrol_user_manually.py  get_assign_submission.py  get_certain_userid_grade.py  get_course_assign.py  get_grade.py  get_user.py  sent_message.py
module/nudges/nudges_notifcation_pipeline/: SubmissionReminderService.py  SubmissionScoreService.py  submssion_pipeline.py
module/nudges/submission_nudges/: main.py  submission_function.py  submission_index_function.py  submission_time_function.py
module/nudges/threshold/: all_threshold.py
module/research_analysis/: common_function.py  convert_time.py  pyproject.toml  read_csv_download.py  read_singlecsv_from_s3.py  write_html.py
module/research_analysis/access_frequency/: access_freq_utils.py  analysis.py  main.py
module/research_analysis/assessment_data/: function.py  main.ipynb  main.py  main_grade.py  main_testing.py
module/research_analysis/assign_pre_48hrs/: main.py
module/research_analysis/download_data/: allterm_course163601_finalgrade.csv
module/research_analysis/firstview_data/: function.py  main.py
module/research_analysis/session_duration_trend/: trend_analysis.py  (+2 more)
modules/athena_query/: assign_duedate_query.py  index.py  pyproject.toml
modules/data_pipeline/: data_aws_import.py  pyproject.toml
modules/lambdas/: pyproject.toml
modules/notebooks/: access_frequency.ipynb  session_analysis.ipynb
modules/research_analysis/: read_csv_download.py
(+23 files in other folders)
