[tool.poetry]
name = "engageai"
version = "1.8.3"
description = "engage ai project poetry"
authors = ["Paggie <paggie70424@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.3.1"
dotenv = "^0.9.9"

[tool.poetry.group.dev.dependencies]
boto3 = "^1.39.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
