[project]
name = "datazone-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Paggie",email = "paggie70424@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3 (>=1.40.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
